<resources>
    <string name="app_name">The Worst Game</string>
    <string name="start_new_mission">Start New Mission</string>
    <string name="next_reward">Next Reward:</string>
    <string name="back_again">Back again, _______?</string>
    <string name="starts_new_mission">Starts new mission</string>
    <string name="tier_progress">Tier Progress</string>
    <string name="welcome_to_the_worst_game">Welcome to the Worst Game</string>
    <string name="call_sign">Call Sign</string>
    <string name="sign_up">Sign Up</string>
    <string name="unit_designation">Pass Phrase</string>
    <string name="login">Login</string>
    <string name="showing_social_for">Showing Social For ________</string>
    <string name="add_friend">Add Friend</string>
    <string name="username">Username</string>
    <string name="rank">Rank</string>
    <string name="are_you_tired">How fatigued are you?</string>
    <string name="give_me_a_mission">Request Mission</string>
    <string name="do_you_have_time">How long can you be away from your station?</string>
    <string name="yes">Yes</string>
    <string name="how_good_are_you_at_being_productive">Do you recall your pre-reincarnation training?</string>
    <string name="no">No</string>

    <string-array name="ages">
        <item> "0 - 17" </item>
        <item> "18 - 23" </item>
        <item> "24 - 29" </item>
        <item> "30 - 35" </item>
        <item> "36 - 41" </item>
        <item> "42 - 47" </item>
        <item> "48 - 53" </item>
        <item> "54 - 59" </item>
        <item> "60 - 65" </item>
        <item> "66 - " </item>
    </string-array>

    <string-array name="time">
        <item> "&lt; minutes" </item>
        <item> "5 minutes" </item>
        <item> "10 minutes" </item>
        <item> "15 minutes" </item>
        <item> "20 minutes" </item>
        <item> "&gt;20 minutes" </item>
    </string-array>

    <string-array name="fatigue">
        <item> "1" </item>
        <item> "2" </item>
        <item> "3" </item>
        <item> "4" </item>
        <item> "5" </item>
    </string-array>

</resources>